--- a/PlanterTake3/app/src/main/res/layout/activity_recent_field_name.xml
+++ b/PlanterTake3/app/src/main/res/layout/activity_recent_field_name.xml
@@ -27,4 +27,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498" />
+
+    <Button
+        android:id="@+id/home1"
+        android:layout_width="192dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginBottom="105dp"
+        android:text="Home"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/goToRecent" />
 </android.support.constraint.ConstraintLayout>
