This is a regular update.

--- a/PlanterTake3/app/src/main/res/layout/activity_new_entry.xml
+++ b/PlanterTake3/app/src/main/res/layout/activity_new_entry.xml
@@ -36,9 +36,9 @@
     <EditText
         android:id="@+id/editText4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="43dp"
         android:ems="10"
-        android:hint="@string/soil_water_amount"
+        android:hint="Soil/Water Amount (VWC)"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/editText5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:ems="10"
-        android:hint="@string/height_of_crop"
+        android:hint="Height of Crop (in.)"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/recentEntry"
         app:layout_constraintEnd_toEndOf="parent"
