Made it look like an actual app.

--- a/PlanterTake3/app/src/main/res/layout/activity_new_entry.xml
+++ b/PlanterTake3/app/src/main/res/layout/activity_new_entry.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/ic_launcher_backs"
     tools:context=".NewEntry">
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
+        android:background="@color/colorAccent"
         android:ems="10"
         android:hint="@string/field_name"
         android:inputType="textPersonName"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/editText2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -22,11 +25,13 @@
     <EditText
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="33dp"
         android:layout_marginBottom="14dp"
+        android:background="@color/colorAccent"
         android:ems="10"
         android:hint="@string/crop_type"
         android:inputType="textPersonName"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/editText4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -36,10 +41,12 @@
     <EditText
         android:id="@+id/editText4"
         android:layout_width="wrap_content"
-        android:layout_height="43dp"
+        android:layout_height="35dp"
+        android:background="@color/colorAccent"
         android:ems="10"
         android:hint="Soil/Water Amount (VWC)"
         android:inputType="numberDecimal"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/editText5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -50,9 +57,11 @@
         android:id="@+id/editText5"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
+        android:background="@color/colorAccent"
         android:ems="10"
         android:hint="Height of Crop (in.)"
         android:inputType="numberDecimal"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/recentEntry"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -64,7 +73,9 @@
         android:layout_width="372dp"
         android:layout_height="57dp"
         android:layout_marginTop="1dp"
+        android:background="@color/colorAccent"
         android:text="@string/please_enter_the_appropriate_value"
+        android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
