--- a/PlanterTake3/app/src/main/res/layout/activity_start_page.xml
+++ b/PlanterTake3/app/src/main/res/layout/activity_start_page.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/ic_launcher_backs"
     tools:context=".StartPage">
 
     <TextView
         android:id="@+id/sample_text"
         android:layout_width="281dp"
         android:layout_height="46dp"
+        android:background="@drawable/ic_launcher_foreground"
         android:text="@string/welcome_to_planter"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,9 +26,9 @@
         android:id="@+id/newEntry"
         android:layout_width="202dp"
         android:layout_height="60dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorAccent"
         android:text="@string/new_entry"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/recentEntry"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,9 +40,9 @@
         android:id="@+id/recentEntry"
         android:layout_width="262dp"
         android:layout_height="61dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorAccent"
         android:text="@string/recent_entries"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
