--- a/PlanterTake3/app/src/main/res/layout/activity_recent_entry.xml
+++ b/PlanterTake3/app/src/main/res/layout/activity_recent_entry.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/ic_launcher_backs"
     tools:context=".RecentEntry">
 
     <TextView
         android:id="@+id/variable1"
         android:layout_width="wrap_content"
-        android:layout_height="27dp"
+        android:layout_height="22dp"
+        android:background="@color/colorAccent"
         android:text="TextView"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/variable2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -21,7 +24,9 @@
         android:id="@+id/variable2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:text="TextView"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/variable3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -32,7 +37,9 @@
         android:id="@+id/variable3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:text="TextView"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/variable4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -43,7 +50,9 @@
         android:id="@+id/variable4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:text="TextView"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -65,21 +74,22 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="104dp"
-        android:layout_height="23dp"
-        android:text="Field Name"
+        android:layout_height="28dp"
+        android:background="@color/colorAccent"
+        android:text=" Field Name"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/variable1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="140dp"
+        tools:layout_editor_absoluteY="49dp" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="103dp"
-        android:layout_height="21dp"
-        android:text="Field Crop"
+        android:layout_height="23dp"
+        android:background="@color/colorAccent"
+        android:text="  Field Crop"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/variable2"
@@ -92,7 +102,9 @@
         android:id="@+id/textView3"
         android:layout_width="272dp"
         android:layout_height="30dp"
+        android:background="@color/colorAccent"
         android:text="    Amt of Water in Soil (cm)"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/variable3"
@@ -103,9 +115,11 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="130dp"
+        android:layout_width="128dp"
         android:layout_height="29dp"
-        android:text="Height of Crop"
+        android:background="@color/colorAccent"
+        android:text=" Height of Crop"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/variable4"
@@ -126,4 +140,10 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/homeButton"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <android.support.constraint.Group
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </android.support.constraint.ConstraintLayout>
